--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@
   grid-template-columns: 1fr;
   grid-template-rows: 1fr min-content 1fr;
   appearance: none;
+  margin-block-end: var(--section-outer-margin, 60px);
 }
 
 .decorated-zone {
@@ -148,20 +149,20 @@
 }
 
 .section {
-  column-gap: var(--section-column-gap, 20px);
+  display: grid;
+  grid-template-columns: minmax(10px, 1fr) 2fr;
+  grid-template-rows: 1fr;
+  column-gap: var(--section-column-gap, 10px);
+  /* column-gap: 10px; */
   row-gap: var(--section-row-gap, 20px);
-  margin: var(--section-between-margin, 80px) var(--section-margin, 20px);
+  margin: 0px var(--section-margin, 20px) var(--section-between-margin, 80px);
   /* line-height: var(--main-text-line-height, 1.3em); */
 }
 
-.why {
-  display: grid;
+/* .why {
   margin-block-start: var(--section-outer-margin, 60px);
-  /* grid-template-columns: 1fr 2fr; */
   grid-template-columns: 315px 649px;
-  grid-template-rows: 1fr;
-  column-gap: var(--section-column-gap, 20px);
-}
+} */
 
 .section__title {
   /* grid-row: 1 / -1;
@@ -169,6 +170,8 @@
   line-height: inherit;
   font-size: var(--section-title-font-size, 1rem);
   color: var(--section-title-color, #ff0070);
+  /* word-wrap: break-word; */
+  overflow-wrap: break-word;
 }
 
 .article-list {
@@ -218,7 +221,7 @@
 .cause {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: min-content 1fr;
+  grid-template-rows: minmax(10px, min-content) 1fr;
   row-gap: var(--section-row-gap, 20px);
 }
 
@@ -226,7 +229,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
-  column-gap: var(--section-column-gap, 20px);
+  column-gap: var(--article-inner-column-gap, 20px);
   row-gap: var(--section-row-gap, 20px);
   /* flex-direction: row; */
   grid-row: 2 / -1;
@@ -241,12 +244,12 @@
   font-weight: var(--main-text-font-weight, 400);
 }
 
-.enhancement {
+/* .enhancement {
   display: grid;
-  /* grid-template-columns: 1fr 2fr; */
+  grid-template-columns: 1fr 2fr;
   grid-template-columns: 315px 649px;
   grid-template-rows: 1fr;
-}
+} */
 
 .article_list_enhancement {
   flex-direction: column;
