--- a/styles/tablet.css
+++ b/styles/tablet.css
@@ -18,25 +18,29 @@
     max-inline-size: 364px;
   }
 
-  .why {
-    grid-template-columns: 1fr 2fr;
+  .section {
+    --section-column-gap: 20px;
   }
+
+  /* .why {
+    grid-template-columns: 1fr 2fr;
+  } */
 
   .cause {
     /* grid-template-columns: 1fr 2fr; */
-    grid-template-columns: 236px 2fr;
-    grid-template-rows: min-content 1fr;
+    grid-template-columns: 1fr 2fr;
+    /* grid-template-rows: min-content 1fr; */
   }
 
   .article_list_cause {
     grid-template-columns: 1fr;
-    grid-template-rows: 174px 174px 197px;
+    grid-template-rows: repeat(auto-fit, min-content);
     row-gap: var(--section-row-gap, 20px);
   }
 
-  .enhancement {
+  /* .enhancement {
     grid-template-columns: 1fr 2fr;
-  }
+  } */
 
   /* .imagenes {
     grid-template-rows: 23px 192px 230px 318px;
