--- a/styles/variables.css
+++ b/styles/variables.css
@@ -25,11 +25,12 @@
   --articl-subtitle-font-size: 1.125rem;
   --article-text-size: 1.125rem;
   --section-row-gap: 20px;
-  --section-column-gap: 20px;
+  --section-column-gap: 10px;
   --outer-offset: 20px;
   --decor-offset: 20px;
   --inner-gap: 20px;
   --article-inner-gap: 10px;
+  --article-inner-column-gap: 20px;
   --section-between-margin: 80px;
   --section-outer-margin: 60px;
   --main-margin-size: 20px;
